Reimplemented viewing multiple node configs at once Patched bug where js tried to access html that didn't exist Fixed rendering of node offsets + connection offsets Added spacing between config panels

--- a/styles/node-config.css
+++ b/styles/node-config.css
@@ -22,6 +22,10 @@
   flex-direction:column;
 }
 
+.node-config-controls > * {
+  margin-bottom:1em;
+}
+
 .node-controls-colors {
   background-color:rgb(56, 56, 56);
   color:rgb(167, 167, 167);
